--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,6 +94,7 @@ h2 {
   font-weight: normal;
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 22px;
+  color: rgb(180,16,44);
 }
 
 .papertitle {
