--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,3 +134,35 @@ h2 {
 span.highlight {
   background-color: #ffffd0;
 }
+
+span.tag {
+  font-size: 11px;
+  color: #FFFFFF;
+  /* color: #07889b; */
+  background-color: #0076DF;
+  box-shadow: 2px 2px 1px #E0E0E0;
+  padding: 1px 5px 2px 5px;
+}
+
+button {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-size: 14px;
+  font-weight: 500;
+  line-height: 20px; */
+  list-style: none;
+  margin: 0;
+  padding: 3px 5px;
+  text-align: center;
+  transition: all 100ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
