--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,13 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+name {
+  padding-top: 20px;
+  margin: 0;
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 32px;
+}
+
 a {
   color: #1772d0;
   text-decoration: none;
@@ -103,13 +110,6 @@ h2 {
   font-weight: 700;
 }
 
-.name {
-  padding-top: 20px;
-  margin: 0;
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 32px;
-}
-
 .one {
   width: 160px;
   height: 160px;
@@ -146,7 +146,7 @@ span.tag {
 
 button {
   background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
+  border-radius: 6px;
   border-width: 0;
   color: #333333;
   cursor: pointer;
@@ -157,7 +157,7 @@ button {
   line-height: 20px; */
   list-style: none;
   margin: 0;
-  padding: 3px 5px;
+  padding: 0px 5px;
   text-align: center;
   transition: all 100ms;
   vertical-align: baseline;
