--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{ 
+  box-sizing: border-box
+}
+
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
@@ -136,28 +140,35 @@ span.highlight {
 }
 
 span.tag {
-  font-size: 11px;
+  font-size: 12px;
   color: #FFFFFF;
   /* color: #07889b; */
   background-color: #0076DF;
   box-shadow: 2px 2px 1px #E0E0E0;
   padding: 1px 5px 2px 5px;
+  @media (max-width: 500px) {
+    font-size: 9px;
+  }
 }
 
+
+
 button {
+  -webkit-text-size-adjust: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
+  border-radius: 5px;
   border-width: 0;
   color: #333333;
   cursor: pointer;
   display: inline-block;
   font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  /* font-size: 14px;
-  font-weight: 500;
-  line-height: 20px; */
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px; 
   list-style: none;
   margin: 0;
-  padding: 0px 5px;
+  height: 100%;
+  padding: 1px 6px;
   text-align: center;
   transition: all 100ms;
   vertical-align: baseline;
@@ -165,4 +176,12 @@ button {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  @media (max-width: 500px) {
+    font-size: 18px;
+  }
+  /* border: none;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  outline: none; */
 }
+
